@@ -1,6 +1,8 @@
 package codezap.tag.service;
 
+import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,6 +21,7 @@ import lombok.RequiredArgsConstructor;
 @Transactional(readOnly = true)
 public class TagService {
 
+    private static final int DEFAULT_POPULAR_DATE_RANGE = 7;
     private final TagRepository tagRepository;
     private final TemplateTagRepository templateTagRepository;
 
@@ -65,9 +68,29 @@ public class TagService {
 
     public FindAllTagsResponse findAllByMemberId(Long memberId) {
         List<Tag> tags = templateTagRepository.findAllTagDistinctByMemberId(memberId);
-        return new FindAllTagsResponse(tags.stream()
+        return createFindAllTagsResponse(tags);
+    }
+
+    private FindAllTagsResponse createFindAllTagsResponse(List<Tag> tags) {
+        return tags.stream()
                 .map(FindTagResponse::from)
-                .toList());
+                .collect(Collectors.collectingAndThen(Collectors.toList(), FindAllTagsResponse::new));
+    }
+
+    public FindAllTagsResponse getTopTags(int size) {
+        LocalDate startDate = LocalDate.now();
+        List<Tag> tags = findTopTags(size, startDate);
+        return createFindAllTagsResponse(tags);
+    }
+
+    private List<Tag> findTopTags(int size, LocalDate startDate) {
+        List<Tag> tags = tagRepository.findMostUsedTagsWithinDateRange(size, startDate.minusDays(DEFAULT_POPULAR_DATE_RANGE));
+
+        if (tags.size() >= size) {
+            return tags;
+        }
+
+        return tagRepository.findMostUsedTagsByRecentTemplates(size);
     }
 
     @Transactional
